Modified the action

--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -86,6 +86,6 @@ jobs:
           version: 1.0.23
   
       - name: Build Docker Compose
-        working-directory: ../../lakesidemutual/kubernetes
+        working-directory: ./lakesidemutual/kubernetes
         run: |
           docker-compose -f docker-compose-eureka.yaml build
