--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -12,7 +12,7 @@ env:
     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-    TERRAFORM_ACTION: apply
+    TERRAFORM_ACTION: destroy
     GITHUB_USERNAME: fajmayor
     REPOSITORY_NAME: capstone-lakeside
 
