--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -74,6 +74,9 @@ jobs:
     name: Login to DockerHub
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -86,6 +89,6 @@ jobs:
           version: 1.0.23
   
       - name: Build Docker Compose
-        working-directory: lakesidemutual/kubernetes
+        working-directory: ./lakesidemutual/kubernetes
         run: |
           docker-compose -f docker-compose.yaml build
