--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -94,4 +94,4 @@ jobs:
         working-directory: ./lakesidemutual/kubernetes
         run: |
           export REGISTRY=$REGISTRY
-          docker-compose -f docker-compose.yaml build
+          docker-compose -f docker-compose.yml build
