--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -97,3 +97,4 @@ jobs:
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
           docker-compose -f docker-compose.yml build
+          docker images --format '{{.Repository}}' | grep $REGISTRY_ALIAS | cut -f1 -d' ' | xargs -I {} docker tag {} $REGISTRY/{}
