--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -97,4 +97,4 @@ jobs:
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
           docker-compose -f docker-compose.yml build
-          docker images | grep $REGISTRY_ALIAS | cut -f1 -d' ' | xargs -L 1 docker tag $REGISTRY_ALIAS:{} $REGISTRY/$REGISTRY_ALIAS:{}
+          docker tag REGISTRY_ALIAS:customer-core $REGISTRY/$REGISTRY_ALIAS:customer-core
