--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -97,4 +97,4 @@ jobs:
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
           docker-compose -f docker-compose.yml build
-          docker tag REGISTRY_ALIAS:customer-core $REGISTRY/$REGISTRY_ALIAS:customer-core
+          docker tag $REGISTRY_ALIAS:customer-core $REGISTRY/$REGISTRY_ALIAS:customer-core
