--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -74,8 +74,8 @@ jobs:
     name: Login to DockerHub
     runs-on: ubuntu-latest
     env:
-      REGISTORY: ${{ secrets.DOCKERHUB_USERNAME }}
-      REGISTRY_ALIAS: lakeside-mutual-2020
+      REGISTORY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
+      REGISTRY: docker.io
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -97,4 +97,4 @@ jobs:
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
           docker-compose -f docker-compose.yml build
-          docker images | grep $REGISTRY_ALIAS | cut -f1 -d' ' | xargs -L 1 docker tag $REGISTRY_ALIAS:{} $REGISTRY/$REGISTRY_ALIAS:{}
+          docker images | grep $REGISTRY | cut -f1 -d' ' | xargs -L 1 docker push
