--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -75,7 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       REGISTORY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
-      REGISTRY: docker.io
+      REGISTORY: docker.io
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -94,7 +94,7 @@ jobs:
       - name: Build Docker Compose
         working-directory: ./lakesidemutual/kubernetes
         run: |
-          export REGISTRY=$REGISTRY
-          export REGISTRY_ALIAS=$REGISTRY_ALIAS
+          export REGISTORY=$REGISOTRY
+          export REGISTORY_ALIAS=$REGISTORY_ALIAS
           docker-compose -f docker-compose.yml build
           docker images | grep $REGISTRY | cut -f1 -d' ' | xargs -L 1 docker push
