--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -97,4 +97,4 @@ jobs:
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
           docker-compose -f docker-compose.yml build
-          docker images | grep $REGISTRY | cut -f1 -d' ' | xargs -L 1 docker push
+          docker images | grep $REGISTRY | cut -f1 -d' ' | xargs -L 1 docker push $REGISTRY/$REGISTRY_ALIAS/{}
