--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -96,5 +96,4 @@ jobs:
         run: |
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
-          docker-compose -f docker-compose.yml build
-          docker push fajmayor/customer-core
+          docker-compose -f docker-compose.yml push
