--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -39,6 +39,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'latest'
+        id: install
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
@@ -55,12 +61,6 @@ jobs:
       # - name: Get Kubeconfig
       #   working-directory: ./terraform-eks-provision
       #   run: terraform output kubeconfig > kubeconfig.yaml
-
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v2.0
-        with:
-          version: '1.24.0'
-        id: install
 
       - name: Set kubeconfig
         run: |
