--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -62,11 +62,11 @@ jobs:
       #   working-directory: ./terraform-eks-provision
       #   run: terraform output kubeconfig > kubeconfig.yaml
   
-      - name: Get outputs
-        uses: dflook/terraform-output@v1
-        id: tf-outputs
-        with:
-          path: ./terraform-eks-provision
+      # - name: Get outputs
+      #   uses: dflook/terraform-output@v1
+      #   id: tf-outputs
+      #   with:
+      #     path: ./terraform-eks-provision
 
       - name: Set kubeconfig
         run: |
