--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Set kubeconfig
         run: |
-          aws eks --region ${{ env.AWS_REGION }} update-kubeconfig --name lakesidemutual-eks
+          aws eks --region us-east-2 update-kubeconfig --name lakesidemutual-eks
 
       - name: Verify EKS cluster
         run: kubectl get nodes
