--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -7,12 +7,12 @@ on:
     branches: [ "main" ]
 
 env:
-    AWS_REGION: us-east-1
+    AWS_REGION: us-east-2
     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-    TERRAFORM_ACTION: destroy
+    TERRAFORM_ACTION: apply
     GITHUB_USERNAME: fajmayor
     REPOSITORY_NAME: capstone-lakeside
 
@@ -24,15 +24,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: ${{ env.AWS_REGION }}
 
   # Build AWS Infrastructure
-  deploy_aws_infrastructure:
-    name: Build AWS Infrastructure
+  deploy_aws_infrastructures:
+    name: Build AWS Infrastructures
     needs: configure_aws_credentials
     runs-on: ubuntu-latest
     steps:
@@ -72,18 +72,20 @@ jobs:
         if: ${{ steps.tf-outputs.outputs.cluster_name != '' }}
         run: |
           aws eks --region us-east-2 update-kubeconfig --name ${{ steps.tf-outputs.outputs.cluster_name }}
-
+  
       - name: Verify EKS cluster
         if: ${{ steps.tf-outputs.outputs.cluster_name != '' }}
         run: kubectl get nodes
 
   # login to DockerHub
-  login_to_aws_ecr_public:
+  login_to_dockerHub:
     name: Login to DockerHub
     runs-on: ubuntu-latest
+
     env:
       REGISTRY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
       REGISTRY: docker.io
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
