--- a/lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
@@ -20,7 +20,7 @@ spec:
               value: http://customer-core:8110
             - name: SPRING_BOOT_ADMIN_CLIENT_URL
               value: http://spring-boot-admin:9000
-          image: gcr.io/lakeside-mutual-2020/customer-management-backend
+          image: $REGISTRY/$REGISTRY_ALIAS/customer-management-backend
           imagePullPolicy: Always
           name: customer-management-backend
           ports:
