--- a/lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
@@ -20,7 +20,7 @@ spec:
               value: http://34.65.192.94:8080
             - name: REACT_APP_CUSTOMER_MANAGEMENT_BACKEND
               value: http://34.65.192.94:8100
-          image: gcr.io/lakeside-mutual-2020/customer-management-frontend
+          image: $REGISTRY/$REGISTRY_ALIAS/customer-management-frontend
           imagePullPolicy: Always
           name: customer-management-frontend
           ports:
