--- a/lakesidemutual/kubernetes/manifests/customer-self-service-backend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-self-service-backend.yaml
@@ -22,7 +22,7 @@ spec:
               value: tcp://policy-management-backend:61616
             - name: SPRING_BOOT_ADMIN_CLIENT_URL
               value: http://spring-boot-admin:9000
-          image: gcr.io/lakeside-mutual-2020/customer-self-service-backend
+          image: $REGISTRY/$REGISTRY_ALIAS/customer-self-service-backend
           imagePullPolicy: Always
           name: customer-self-service-backend
           ports:
