--- a/lakesidemutual/kubernetes/manifests/customer-self-service-frontend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-self-service-frontend.yaml
@@ -22,7 +22,7 @@ spec:
               value: http://34.65.192.94:8080
             - name: REACT_APP_POLICY_MANAGEMENT_BACKEND
               value: http://34.65.192.94:8090
-          image: gcr.io/lakeside-mutual-2020/customer-self-service-frontend
+          image: $REGISTRY/$REGISTRY_ALIAS/customer-self-service-frontend
           imagePullPolicy: Always
           name: customer-self-service-frontend
           ports:
