--- a/lakesidemutual/kubernetes/manifests/policy-management-frontend.yaml
+++ b/lakesidemutual/kubernetes/manifests/policy-management-frontend.yaml
@@ -18,7 +18,7 @@ spec:
         - env:
             - name: VUE_APP_POLICY_MANAGEMENT_BACKEND
               value: http://34.65.192.94:8090
-          image: gcr.io/lakeside-mutual-2020/policy-management-frontend
+          image: $REGISTRY/$REGISTRY_ALIAS/policy-management-frontend
           imagePullPolicy: Always
           name: policy-management-frontend
           ports:
