--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -12,7 +12,7 @@ env:
     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-    TERRAFORM_ACTION: apply
+    TERRAFORM_ACTION: destroy
     GITHUB_USERNAME: fajmayor
     REPOSITORY_NAME: capstone-lakeside
 
@@ -108,3 +108,28 @@ jobs:
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
           docker-compose -f docker-compose.yml build
           docker images | grep docker.io | cut -f1 -d' ' | xargs -L 1 docker-compose push
+
+  Run Kubernetes Manifests in EKS:
+    name: Kubernetes manifests
+    runs-on: ubuntu-latest
+    if: ${{ steps.tf-outputs.outputs.cluster_name != '' }}
+
+    env:
+      REGISTRY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
+      REGISTRY: docker.io
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: "Activate personal namespace"
+        uses: okteto/namespace@master
+        with:
+          name: lakesidemutual
+
+      - name: "Create deployment"
+        uses: okteto/apply@master
+        with:
+          manifest: ./lakesidemutual/kubernetes/manifests
+          REGISTRY_ALIAS: ${{ env.REGISTRY_ALIAS }}
+          REGISTRY: ${{ env.REGISTRY }}
