--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -109,11 +109,11 @@ jobs:
           docker-compose -f docker-compose.yml build
           docker images | grep docker.io | cut -f1 -d' ' | xargs -L 1 docker-compose push
 
-  Run Kubernetes Manifests in EKS:
+  run_manifests:
     name: Kubernetes manifests
     needs: deploy_aws_infrastructures
     runs-on: ubuntu-latest
-
+    if: ${{ steps.tf-outputs.outputs.cluster_name != '' }}
     env:
       REGISTRY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
       REGISTRY: docker.io
