--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -122,12 +122,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: "Activate personal namespace"
-        uses: okteto/namespace@master
+        uses: okteto/namespace@main
         with:
           name: lakesidemutual
 
       - name: "Create deployment"
-        uses: okteto/apply@master
+        uses: okteto/apply@main
         with:
           manifest: ./lakesidemutual/kubernetes/manifests
           REGISTRY_ALIAS: ${{ env.REGISTRY_ALIAS }}
