--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -110,7 +110,7 @@ jobs:
           repository: "${{ github.event.repository.name }}"
           login: "${{ env.DOCKERHUB_USERNAME }}"
           password: "${{ env.DOCKERHUB_TOKEN }}"
-          tag: latest
+          #tag: latest
   
       - name: Build Docker Compose
         working-directory: ./lakesidemutual/kubernetes
