--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -85,6 +85,7 @@ jobs:
     env:
       REGISTRY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
       REGISTRY: registry.hub.docker.com
+      IMAGE_TAG: ${{ github.sha }}
       
     steps:
       - name: Checkout repository
@@ -111,7 +112,7 @@ jobs:
           repository: "customer-core"
           login: "${{ env.DOCKERHUB_USERNAME }}"
           password: "${{ env.DOCKERHUB_TOKEN }}"
-          tag: latest
+          tag: ${{ env.IMAGE_TAG }}
   
       - name: Build Docker Compose
         if: ${{ steps.image_exists.outputs.image == '' }}
@@ -119,6 +120,7 @@ jobs:
         run: |
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
+          export IMAGE_TAG=$IMAGE_TAG
           docker-compose -f docker-compose.yml build
           docker images | grep docker.io | cut -f1 -d' ' | xargs -L 1 docker-compose push
 
@@ -139,6 +141,17 @@ jobs:
       #   uses: okteto/namespace@main
       #   with:
       #     name: lakesidemutual
+
+      - name: Get outputs
+        uses: dflook/terraform-output@v1
+        id: tf-outputs
+        with:
+          path: ./terraform-eks-provision
+
+      - name: Set kubeconfig
+        if: ${{ steps.tf-outputs.outputs.cluster_name != '' }}
+        run: |
+          aws eks --region us-east-2 update-kubeconfig --name ${{ steps.tf-outputs.outputs.cluster_name }}
 
       - name: "Create deployment"
         uses: okteto/apply@main
