--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -7,14 +7,14 @@ on:
     branches: [ "main" ]
 
 env:
-    AWS_REGION: us-east-2
+    AWS_REGION: ${{ vars.AWS_REGION }}
     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     TERRAFORM_ACTION: destroy
-    GITHUB_USERNAME: fajmayor
-    REPOSITORY_NAME: capstone-lakeside
+    GITHUB_USERNAME: ${{ vars.MY_GITHUB_USERNAME }}
+    REPOSITORY_NAME: ${{ vars.REPOSITORY_NAME }}
 
 jobs:
 
