--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -115,7 +115,7 @@ jobs:
           tag: ${{ env.IMAGE_TAG }}
   
       - name: Build Docker Compose
-        if: ${{ steps.image_exists.outputs.image != '$REGISTRY/$REGISTRY_ALIAS/customer-core:$IMAGE_TAG' }}
+        if: ${{ steps.image_exists.outputs.image == '' }}
         working-directory: ./lakesidemutual/kubernetes
         run: |
           export REGISTRY=$REGISTRY
