--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -85,7 +85,7 @@ jobs:
     env:
       REGISTRY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
       REGISTRY: docker.io
-      IMAGE_TAG: ${{ github.sha }}
+      IMAGE_TAG: "latest"
       
     steps:
       - name: Checkout repository
@@ -115,7 +115,7 @@ jobs:
           tag: ${{ env.IMAGE_TAG }}
   
       - name: Build Docker Compose
-        if: ${{ steps.image_exists.outputs.image == '' }}
+        if: ${{ steps.image_exists.outputs.image != '$REGISTRY/$REGISTRY_ALIAS/customer-core:$IMAGE_TAG' }}
         working-directory: ./lakesidemutual/kubernetes
         run: |
           export REGISTRY=$REGISTRY
