--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -115,7 +115,7 @@ jobs:
           tag: ${{ env.IMAGE_TAG }}
   
       - name: Build Docker Compose
-        if: ${{ steps.image_exists.outputs.image != '$REGISTRY/$REGISTRY_ALIAS/customer-core:$IMAGE_TAG' }}
+        if: ${{ steps.image_exists.outputs.image == '' }}
         working-directory: ./lakesidemutual/kubernetes
         run: |
           export REGISTRY=$REGISTRY
@@ -152,7 +152,6 @@ jobs:
           path: ./terraform-eks-provision
 
       - name: Set kubeconfig
-        if: ${{ steps.tf-outputs.outputs.cluster_name != '' }}
         run: |
           aws eks update-kubeconfig --name ${{ steps.tf-outputs.outputs.cluster_name }} --region us-east-2
 
