--- a/lakesidemutual/kubernetes/manifests/customer-core.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-core.yaml
@@ -18,7 +18,7 @@ spec:
         - env:
             - name: SPRING_BOOT_ADMIN_CLIENT_URL
               value: http://spring-boot-admin:9000
-          image: gcr.io/lakeside-mutual-2020/customer-core
+          image: $REGISTRY/$REGISTRY_ALIAS/customer-core
           imagePullPolicy: Always
           name: customer-core
           ports:
