--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -12,7 +12,7 @@ env:
     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-    TERRAFORM_ACTION: destroy
+    TERRAFORM_ACTION: apply
     GITHUB_USERNAME: ${{ vars.MY_GITHUB_USERNAME }}
     REPOSITORY_NAME: ${{ vars.REPOSITORY_NAME }}
     REGISTRY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -162,6 +162,6 @@ jobs:
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
           export IMAGE_TAG=$IMAGE_TAG
-          kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-core.yaml
-          kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
-          kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
+      #    kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-core.yaml
+      #    kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
+      #    kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
