Updated the EKS

--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -162,6 +162,12 @@ jobs:
           export REGISTRY=$REGISTRY
           export REGISTRY_ALIAS=$REGISTRY_ALIAS
           export IMAGE_TAG=$IMAGE_TAG
-      #    kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-core.yaml
-      #    kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
-      #    kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-core.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-self-service-frontend.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/customer-seif-service-backend.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/policy-management-frontend.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/policy-management-backend.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/spring-boot-admin.yaml
+          kubectl apply -f ./lakesidemutual/kubernetes/manifests/risk-management-server.yaml
