--- a/lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
@@ -20,7 +20,7 @@ spec:
               value: http://18.221.202.2:8080
             - name: REACT_APP_CUSTOMER_MANAGEMENT_BACKEND
               value: http://18.221.202.2:8100
-          image: $REGISTRY/$REGISTRY_ALIAS/customer-management-frontend
+          image: fajmayor/customer-management-frontend
           imagePullPolicy: Always
           name: customer-management-frontend
           ports:
