Updated the manifests

--- a/lakesidemutual/kubernetes/manifests/customer-self-service-backend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-self-service-backend.yaml
@@ -41,4 +41,4 @@ spec:
       port: 8080
       targetPort: 8080
   type: LoadBalancer
-  loadBalancerIP: 18.221.202.2
+  #loadBalancerIP: 18.221.202.2
