--- a/lakesidemutual/kubernetes/manifests/customer-self-service-frontend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-self-service-frontend.yaml
@@ -17,12 +17,11 @@ spec:
       containers:
         - env:
             - name: REACT_APP_CUSTOMER_MANAGEMENT_BACKEND
-              value: http://customer-management-backend:8110
-              #value: http://18.221.202.2:8100
+              value: http://18.221.202.2:8100
             - name: REACT_APP_CUSTOMER_SELF_SERVICE_BACKEND
-              value: http://customer-self-service-backend:8080
+              value: http://18.221.202.2:8080
             - name: REACT_APP_POLICY_MANAGEMENT_BACKEND
-              value: http://policy-management-backend:8090
+              value: http://18.221.202.2:8090
           image: fajmayor/customer-self-service-frontend
           imagePullPolicy: Always
           name: customer-self-service-frontend
@@ -42,4 +41,4 @@ spec:
       port: 3000
       targetPort: 80
   type: LoadBalancer
-  #loadBalancerIP: 18.221.202.2
+  loadBalancerIP: 18.221.202.2
