--- a/lakesidemutual/kubernetes/manifests/spring-boot-admin.yaml
+++ b/lakesidemutual/kubernetes/manifests/spring-boot-admin.yaml
@@ -34,4 +34,4 @@ spec:
       port: 9000
       targetPort: 9000
   type: LoadBalancer
-  #loadBalancerIP: 18.221.202.2
+  loadBalancerIP: 18.221.202.2
